test/integration/bad/examples-bad/new/transformations-bad5.stan
data { vector<lower=T,  while> x;}